@@ -1,4 +1,5 @@
 Adminer-4.17.2-dev:
+MongoDB: Remove support for deprecated extension mongo
 
 Adminer-4.17.1 (released 2025-02-25):
 MySQL: Fix typo in the date type (regression from 4.17.0)
